--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".MapsActivity"
+            android:name=".DataViewActivity"
             android:label="@string/title_activity_maps"
             android:screenOrientation="portrait" />
         <activity android:name=".SplashActivity"
