--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     compile 'com.google.android.gms:play-services:9.6.0'
     compile 'com.android.support:design:24.2.1'
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:recyclerview-v7:25.0.1'
 }
