--- a/server/package.json
+++ b/server/package.json
@@ -7,13 +7,15 @@
   },
   "dependencies": {
     "body-parser": "~1.15.1",
+    "connect": "~3.5.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.13.4",
+    "file-system": "^2.2.2",
     "jade": "~1.11.0",
+    "kerberos": "~0.0.22",
     "mongodb": "^2.2.11",
-    "serve-favicon": "~2.3.0",
     "morgan": "~1.7.0",
-    "kerberos": "~0.0.22"
+    "serve-favicon": "~2.3.0"
   }
 }
