Integration of clustering sample points and picture points with previous implementation

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
 
    <application
        android:allowBackup="true"
+       android:largeHeap="true"
        android:icon="@mipmap/icon_green_blue"
        android:label="@string/app_name"
        android:supportsRtl="true"
