--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     compile 'com.android.support:design:24.2.1'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:recyclerview-v7:25.0.1'
+    compile 'com.google.maps.android:android-maps-utils:0.5+'
 }
