--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "babyparse": "~0.4.6",
     "body-parser": "~1.15.1",
     "connect": "~3.5.0",
     "cookie-parser": "~1.4.3",
@@ -18,6 +19,6 @@
     "mongodb": "^2.2.11",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0",
-    "babyparse" : "~0.4.6"
+    "sharp": "^0.17.2"
   }
 }
