--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
             android:name=".DataViewActivity"
             android:label="@string/title_activity_maps"
             android:screenOrientation="portrait" />
+
         <activity
             android:name=".SplashActivity"
             android:screenOrientation="portrait">
@@ -50,10 +51,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PhotoCommentActivity"
-                  android:windowSoftInputMode="stateUnchanged|adjustPan">
 
-        </activity>
+        <activity
+            android:name=".PhotoCommentActivity"
+            android:windowSoftInputMode="stateUnchanged|adjustPan"
+            android:screenOrientation="portrait" />
+
     </application>
 
 </manifest>
