Permission Handling Revised for location and photo + deals when gps and internet not switched on by informing user to swtich on before using app feature

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
 
     <!-- Internet permission required for API connection -->
    <uses-permission android:name="android.permission.INTERNET" />
+   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
    <application
        android:allowBackup="true"
