--- a/android/gradle/wrapper/gradle-wrapper.properties
+++ b/android/gradle/wrapper/gradle-wrapper.properties
@@ -1,8 +1,8 @@
-<<<<<<< HEAD
+<<<<<<<=HEAD
 #Tue Apr 18 11:54:23 BST 2017
 =======
 #Tue Apr 18 10:46:46 BST 2017
->>>>>>> feature-NielsonHeuristics
+>>>>>>>=feature-NielsonHeuristics
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
