--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
-android/app/build/
 android/build/
-
+android/.gradle
+android/.idea/workspace.xml
+android/.idea/libraries
+android/app/.idea/workspace.xml
+android/app/.idea/libraries
+android/app/build/
