--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 android/build/
-android/.gradle
+android/.gradle/
 android/.idea/workspace.xml
-android/.idea/libraries
+android/.idea/libraries/
 android/app/.idea/workspace.xml
-android/app/.idea/libraries
+android/app/.idea/libraries/
 android/app/build/
