--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -13,7 +13,7 @@ android {
     buildToolsVersion '25.0.3'
     defaultConfig {
         applicationId "com.bitbusters.android.speproject"
-        minSdkVersion 15
+        minSdkVersion 18
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -32,9 +32,13 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
+    testCompile 'junit:junit:4.12'
+    androidTestCompile 'com.android.support:support-annotations:25.3.1'
+    androidTestCompile 'com.android.support.test:runner:0.5'
+    androidTestCompile 'com.android.support.test:rules:0.5'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
+    androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
+
     compile 'com.android.support:appcompat-v7:25.3.1'
     //compile 'com.google.android.gms:play-services:9.6.0'
     compile 'com.google.android.gms:play-services-maps:11.0.0'
@@ -42,7 +46,6 @@ dependencies {
     compile 'com.google.android.gms:play-services-appinvite:11.0.0'
 
     compile 'com.android.support:design:25.3.1'
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.google.maps.android:android-maps-utils:0.5'
 }
