--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -39,13 +39,17 @@ dependencies {
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
     androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
 
-    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:appcompat-v7:25.3.0'
     //compile 'com.google.android.gms:play-services:9.6.0'
     compile 'com.google.android.gms:play-services-maps:11.0.1'
     compile 'com.google.android.gms:play-services-location:11.0.1'
     compile 'com.google.android.gms:play-services-appinvite:11.0.1'
-
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.google.maps.android:android-maps-utils:0.5'
+
+    // Drawer
+    compile('com.mikepenz:materialdrawer:5.9.2@aar') {
+        transitive = true
+    }
 }
