--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
     signingConfigs {
@@ -38,7 +39,6 @@ dependencies {
     androidTestCompile 'com.android.support.test:rules:0.5'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
     androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
-
     compile 'com.android.support:appcompat-v7:25.3.0'
     //compile 'com.google.android.gms:play-services:9.6.0'
     compile 'com.google.android.gms:play-services-maps:11.0.1'
@@ -47,9 +47,14 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.google.maps.android:android-maps-utils:0.5'
-
+    // https://mvnrepository.com/artifact/io.jeo/proj4j
+    compile group: 'io.jeo', name: 'proj4j', version: '0.1.1'
     // Drawer
     compile('com.mikepenz:materialdrawer:5.9.2@aar') {
         transitive = true
     }
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
