--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -39,15 +39,16 @@ dependencies {
     androidTestCompile 'com.android.support.test:rules:0.5'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
     androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
-    compile 'com.android.support:appcompat-v7:25.3.0'
+    compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'joda-time:joda-time:2.9.4'
     //compile 'com.google.android.gms:play-services:9.6.0'
-    compile 'com.google.android.gms:play-services-maps:11.0.1'
-    compile 'com.google.android.gms:play-services-location:11.0.1'
-    compile 'com.google.android.gms:play-services-appinvite:11.0.1'
+    compile 'com.google.android.gms:play-services-maps:11.0.2'
+    compile 'com.google.android.gms:play-services-location:11.0.2'
+    compile 'com.google.android.gms:play-services-appinvite:11.0.2'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.google.maps.android:android-maps-utils:0.5'
+    compile 'com.cocoahero.android:geojson:1.0.1@jar'
     // https://mvnrepository.com/artifact/io.jeo/proj4j
     compile group: 'io.jeo', name: 'proj4j', version: '0.1.1'
     // Drawer
