--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ android/app/.idea/*
 android/app/build/
 server/routes/thumbnails/
 server/routes/uploads/
-server/node_modules/.bin/
+server/node_modules/
+server/node_modules/*
 *.iml
 *.apk
