--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^2.2.11",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0",
-    "sharp": "^0.17.2"
+    "sharp": "^0.17.2",
+    "xmlhttprequest": "^1.8.0"
   }
 }
