--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,9 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "babyparse": "~0.4.6",
+    "bluebird": "^3.5.0",
     "body-parser": "~1.15.1",
     "connect": "~3.5.0",
     "cookie-parser": "~1.4.3",
@@ -17,6 +19,7 @@
     "jimp": "^0.2.27",
     "kerberos": "~0.0.22",
     "mongodb": "^2.2.11",
+    "mongoose": "^4.11.1",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0",
     "sharp": "^0.17.2",
