--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
         transitive = true
     }
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
 }
 repositories {
     mavenCentral()
