--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -46,7 +46,8 @@
         <activity
             android:name=".DataViewActivity"
             android:label="@string/title_activity_maps"
-            android:screenOrientation="portrait" />
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:screenOrientation="fullSensor" />
 
         <activity
             android:name=".SplashActivity"
