EPR API calls ready to be tested on the server

--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,6 @@ server/routes/thumbnails/
 server/routes/uploads/
 server/node_modules/
 server/node_modules/*
+server/package-lock.json
 *.iml
 *.apk
