--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "mongodb": "^2.2.11",
     "mongoose": "^4.11.1",
     "morgan": "~1.7.0",
+    "proj4": "^2.4.3",
     "serve-favicon": "~2.3.0",
     "sharp": "^0.17.2",
     "xmlhttprequest": "^1.8.0"
