--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
        android:icon="@mipmap/icon_green_blue"
        android:label="@string/app_name"
        android:supportsRtl="true"
-       android:theme="@style/SplashTheme">
+       android:theme="@style/AppTheme">
 
        <!--
             The API key for Google Maps-based APIs is defined as a string resource.
