--- a/android/gradle/wrapper/gradle-wrapper.properties
+++ b/android/gradle/wrapper/gradle-wrapper.properties
@@ -1,9 +1,9 @@
-#Thu Jul 20 08:53:30 BST 2017
+#Thu Dec 07 10:20:37 GMT 2017
 distributionBase=GRADLE_USER_HOME
-distributionPath=wrapper/dists
 >>>>>>>=feature-NielsonHeuristics
+distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-3.4.1-all.zip
-=\=\=\=\=\=\==
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.1-all.zip
 <<<<<<<=HEAD
+=\=\=\=\=\=\=\=
